--- a/views/home.html
+++ b/views/home.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/modals/friends-modal.css" />
     <link rel="stylesheet" href="../css/modals/blocked-modal.css" />
     <link rel="stylesheet" href="../css/modals/my-posts-modal.css" />
+    <link rel="stylesheet" href="../css/modals/Requests-modal.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
@@ -24,7 +25,7 @@
     <!-- my navbar -->
     <nav class="fixed-nav-bar">
       <div id="menu" class="menu">
-        <a class="sitename"><span>Pocket</span>  World</a>
+        <a class="sitename"><span>Pocket</span> World</a>
         <a class="show" href="#menu">Menu</a>
         <a class="hide" href="#hidemenu">Menu</a>
         <a href="">
@@ -42,6 +43,9 @@
           </li>
           <li>
             <a href="#frnd-modal"><i class="fas fa-users"></i> Friends</a>
+          </li>
+          <li>
+            <a href="#myRequests-modal"><i class="fas fa-bell"></i> Requests</a>
           </li>
           <li>
             <a href="#myPosts-modal"
@@ -100,232 +104,272 @@
           ></textarea>
           <button class="post-button" id="post-button">Post</button>
         </div>
-        <div id="post1">
+        <div id="post1"></div>
 
-        </div>
+        <!--end of middle section : post feed -->
 
-        
-      <!--end of middle section : post feed -->
-
-      <!-- right side bar :  People you may know-->
-      <div class="right_column">
-        <div class="container">
-          <div class="heading">People you may know</div>
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-            <a href=""><i class="fas fa-plus-circle"></i></a>
-          </div>
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-            <a href=""><i class="fas fa-plus-circle"></i></a>
-          </div>
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-            <a href=""><i class="fas fa-plus-circle"></i></a>
-          </div>
-          <div class="ppl">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="ppl-img"
-            />
-            <h3>Beverly Little</h3>
-            <a href=""><i class="fas fa-plus-circle"></i></a>
+        <!-- right side bar :  People you may know-->
+        <div class="right_column">
+          <div class="container">
+            <div class="heading">People you may know</div>
+            <div class="ppl">
+              <img
+                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+                class="ppl-img"
+              />
+              <h3>Beverly Little</h3>
+              <a href=""><i class="fas fa-plus-circle"></i></a>
+            </div>
+            <div class="ppl">
+              <img
+                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+                class="ppl-img"
+              />
+              <h3>Beverly Little</h3>
+              <a href=""><i class="fas fa-plus-circle"></i></a>
+            </div>
+            <div class="ppl">
+              <img
+                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+                class="ppl-img"
+              />
+              <h3>Beverly Little</h3>
+              <a href=""><i class="fas fa-plus-circle"></i></a>
+            </div>
+            <div class="ppl">
+              <img
+                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+                class="ppl-img"
+              />
+              <h3>Beverly Little</h3>
+              <a href=""><i class="fas fa-plus-circle"></i></a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <!-- end of right side bar :  People you may know-->
+      <!-- end of right side bar :  People you may know-->
 
-    <!-- my modals -->
+      <!-- my modals -->
 
-    <!-- search modal -->
-    <div id="srch-modal" class="search-modal">
-      <div class="search-modal__content">
-        <div>
-          <h2>Search for potintial Friends</h2>
+      <!-- search modal -->
+      <div id="srch-modal" class="search-modal">
+        <div class="search-modal__content">
+          <div>
+            <h2>Search for potintial Friends</h2>
+            <hr />
+            <a href="#" class="search-modal__close"
+              ><i class="fas fa-times-circle"></i
+            ></a>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="add">Add <i class="fas fa-plus-circle"></i></button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="added">
+              add <i class="fas fa-check-circle"></i>
+            </button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="add">Add <i class="fas fa-plus-circle"></i></button>
+          </div>
+        </div>
+      </div>
+      <!-- end of search modal -->
+
+      <!-- my friends list modal -->
+      <div id="frnd-modal" class="friends-modal">
+        <div class="friends-modal__content">
+          <div class="myfriends-header">
+            <h1>My Friends List</h1>
+            <hr />
+            <a href="#" class="friends-modal__close"
+              ><i class="fas fa-times-circle"></i
+            ></a>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="unfriend">
+              unfriend <i class="fas fa-minus-circle"></i>
+            </button>
+            <button class="block">block <i class="fas fa-ban"></i></button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="unfriend">
+              unfriend <i class="fas fa-minus-circle"></i>
+            </button>
+            <button class="blocked">block <i class="fas fa-ban"></i></button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+            <button class="unfriend">
+              unfriend <i class="fas fa-minus-circle"></i>
+            </button>
+            <button class="block">block <i class="fas fa-ban"></i></button>
+          </div>
+        </div>
+      </div>
+      <!-- end of my friends list modal -->
+
+      <!-- my block list modal -->
+      <div id="blocked-modal" class="friends-modal">
+        <div class="friends-modal__content">
+          <div class="blocked-header">
+            <h1>My blocked List</h1>
+            <hr />
+            <a href="#" class="friends-modal__close"
+              ><i class="fas fa-times-circle"></i
+            ></a>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+
+            <button class="block">block <i class="fas fa-ban"></i></button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+
+            <button class="blocked">block <i class="fas fa-ban"></i></button>
+          </div>
+
+          <!-- a user -->
+          <div class="ppl">
+            <img
+              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+              class="ppl-img"
+            />
+            <h3>Beverly Little</h3>
+
+            <button class="block">block <i class="fas fa-ban"></i></button>
+          </div>
+        </div>
+      </div>
+      <!-- end of my block list modal -->
+
+      <!-- my posts modal -->
+      <div id="myPosts-modal" class="my-posts-modal">
+        <div class="my-posts-modal__content">
+          <div class="myposts-header">
+            <h1>My posts List</h1>
+            <hr />
+            <a href="#" class="my-posts-modal__close"
+              ><i class="fas fa-times-circle"></i
+            ></a>
+          </div>
+
+          <!-- a post -->
+          <div class="post-container">
+            <div class="post">
+              <img
+                src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
+                class="post-img"
+              />
+              <h3>Beverly Little</h3>
+              <p>12/10/2021</p>
+            </div>
+            <textarea class="post-box" rows="3">
+ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </textarea
+            >
+
+            <button class="update">update</button>
+            <button class="delete">delete</button>
+          </div>
           <hr />
-          <a href="#" class="search-modal__close"
+        </div>
+      </div>
+    </div>
+
+    <!-- my requests modal -->
+    <div id="myRequests-modal" class="my-requests-modal">
+      <div class="my-requests-modal__content">
+        <div class="my-requests-header">
+          <h1>My Requests</h1>
+          <hr />
+          <a href="#" class="my-requests-modal__close"
             ><i class="fas fa-times-circle"></i
           ></a>
         </div>
 
-        <!-- a user -->
+        <!-- a requests -->
         <div class="ppl">
           <img
             src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
             class="ppl-img"
           />
           <h3>Beverly Little</h3>
-          <button class="add">Add <i class="fas fa-plus-circle"></i></button>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="added">add <i class="fas fa-check-circle"></i></button>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="add">Add <i class="fas fa-plus-circle"></i></button>
-        </div>
-      </div>
-    </div>
-    <!-- end of search modal -->
-
-    <!-- my friends list modal -->
-    <div id="frnd-modal" class="friends-modal">
-      <div class="friends-modal__content">
-        <div class="myfriends-header">
-          <h1>My Friends List</h1>
-          <hr />
-          <a href="#" class="friends-modal__close"
-            ><i class="fas fa-times-circle"></i
-          ></a>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="unfriend">
-            unfriend <i class="fas fa-minus-circle"></i>
+          <button class="accept">
+            accept <i class="fas fa-check-circle"></i>
           </button>
-          <button class="block">block <i class="fas fa-ban"></i></button>
+          <button class="ignore">ignore <i class="fas fa-ban"></i></button>
         </div>
 
-        <!-- a user -->
         <div class="ppl">
           <img
             src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
             class="ppl-img"
           />
           <h3>Beverly Little</h3>
-          <button class="unfriend">
-            unfriend <i class="fas fa-minus-circle"></i>
+          <button class="accept">
+            accept <i class="fas fa-check-circle"></i>
           </button>
-          <button class="blocked">block <i class="fas fa-ban"></i></button>
+          <button class="ignore">ignore <i class="fas fa-ban"></i></button>
         </div>
 
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-          <button class="unfriend">
-            unfriend <i class="fas fa-minus-circle"></i>
-          </button>
-          <button class="block">block <i class="fas fa-ban"></i></button>
-        </div>
       </div>
     </div>
-    <!-- end of my friends list modal -->
-
-    <!-- my block list modal -->
-    <div id="blocked-modal" class="friends-modal">
-      <div class="friends-modal__content">
-        <div class="blocked-header">
-          <h1>My blocked List</h1>
-          <hr />
-          <a href="#" class="friends-modal__close"
-            ><i class="fas fa-times-circle"></i
-          ></a>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-
-          <button class="block">block <i class="fas fa-ban"></i></button>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-
-          <button class="blocked">block <i class="fas fa-ban"></i></button>
-        </div>
-
-        <!-- a user -->
-        <div class="ppl">
-          <img
-            src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-            class="ppl-img"
-          />
-          <h3>Beverly Little</h3>
-
-          <button class="block">block <i class="fas fa-ban"></i></button>
-        </div>
-      </div>
-    </div>
-    <!-- end of my block list modal -->
-
-    <!-- my posts modal -->
-    <div id="myPosts-modal" class="my-posts-modal">
-      <div class="my-posts-modal__content">
-        <div class="myposts-header">
-          <h1>My posts List</h1>
-          <hr />
-          <a href="#" class="my-posts-modal__close"
-            ><i class="fas fa-times-circle"></i
-          ></a>
-        </div>
-
-        <!-- a post -->
-        <div class="post-container">
-          <div class="post">
-            <img
-              src="https://images.unsplash.com/photo-1484186139897-d5fc6b908812?ixlib=rb-0.3.5&s=9358d797b2e1370884aa51b0ab94f706&auto=format&fit=crop&w=200&q=80%20500w"
-              class="post-img"
-            />
-            <h3>Beverly Little</h3>
-            <p>12/10/2021</p>
-          </div>
-          <textarea class="post-box" rows="3"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </textarea>
-          
-          <button class="update">update</button>
-          <button class="delete">delete</button>
-        </div>
-        <hr/>
-        
-      </div>
-    </div>
-    </div>
+    <!-- end of requests -->
 
     <script src="../scripts/script-home.js"></script>
   </body>
